overflow bug fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ body {
 
 main {
   text-align: center;
+  overflow: hidden;
 }
 #logo {
   width: 150px;
